# idms-db2-modernizer

./: installed.txt  main.py  pyproject.toml
data/output/: canonical_model.json  db2_ddl.sql
src/idms_modernizer/: app.py
src/idms_modernizer/core/: config.py  constants.py  exceptions.py  logger.py  utils.py
src/idms_modernizer/domain/: canonical_models.py  db2_models.py  document_models.py  models.py  relationship_models.py  schema_models.py  section_models.py
src/idms_modernizer/extractors/: field_extractor.py  owner_member_extractor.py  primary_key_extractor.py
src/idms_modernizer/generators/: ddl_generator.py
src/idms_modernizer/graph/: schema_graph.py
src/idms_modernizer/parsers/: text_extractor.py
src/idms_modernizer/services/: business_datatype_inference.py  canonical_schema_builder.py  date_field_consolidator.py  db2_datatype_mapper.py  db2_generation_service.py  db2_mapping_service.py  db2_model_builder.py  db2_model_service.py  document_segmenter.py  er_diagram_generator.py  metadata_builder.py  metadata_service.py  name_normalizer.py  relationship_resolver.py  validation_service.py
src/idms_modernizer/tests/: test_date_field_consolidator.py  test_diagram_parser.py  test_normalization_mapping.py  test_schema_parser.py
src/idms_modernizer/ui/: metadata_page.py  upload_page.py
