[project]
name = "idms-db2-modernizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "paddleocr>=3.4.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "reportlab>=4.5.1",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "structlog>=26.1.0",
    "tqdm>=4.68.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.17",
]
